# JadePack

./: .gitignore  .hintrc  installer.nsi  package.json  vite.config.js
scripts/: release.ps1
src/: App.css  AppRouter.jsx  globals.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: api_client.rs  crypto.rs  japk_scramble.rs  japk_v2.rs  lib.rs  main.rs
src/components/: AuthGate.jsx  LanguageSelector.jsx  LogDock.jsx  Sidebar.jsx
src/hooks/: useBuildWorkspace.js  useWindowTheme.js
src/pages/: AboutPage.jsx  BuildCenterPage.jsx  CliBuildPage.jsx  PackageInspectPage.jsx
